Fix CSS for console lines that wrap (#304)

--- a/src/main/frontend/pipeline-console-view/pipeline-console/main/pipeline-console.scss
+++ b/src/main/frontend/pipeline-console-view/pipeline-console/main/pipeline-console.scss
@@ -101,6 +101,12 @@
   padding-left: 16px;
 }
 
+.console-text div {
+  text-indent: 0;
+  padding-left: 15px;
+  padding-right: 5px;
+}
+
 div.show-more-console {
   background-color: var(--alert-warning-bg-color);
 }
@@ -269,6 +275,7 @@ a.console-line-number {
   color: var(--link-color);
   white-space: nowrap;
   display: inline-block;
+  flex-shrink: 0;
 }
 
 div.console-output-line-anchor {
